--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             <li><a href=""><i class="bi bi-cart"></i>Chat</a></li>
         </ul>
     </div>
+    <div id="header">
+        <ul>
+            <li class="logo"><img src="./Images/logo.svg" alt="error"></li>
+            <li class="input_search"><i class="bi bi-search"></i><input type="text" placeholder="serarch Box"></li>
+            <li class="become_sealler"><i class="bi bi-shop-window"></i><a href="#">Become a Seler</a></li>
+            <li><a href=""><i class="bi bi-person"></i>Sign in</a></li>
+            <li><a href=""><i class="bi bi-cart"></i>Chat</a></li>
+        </ul>
+    </div>
 
 </body>
 </html>
