--- a/index.html
+++ b/index.html
@@ -225,24 +225,77 @@
 
     <!-- footer design  -->
     <div id="footer">
-        <div id="about">
-
+      <div class="box1">
+        <div class="content">
+          <a href="#">About</a>
+          <ol>
+            <li>hello</li>
+            <li>hello</li>
+            <li>hello</li>
+          </ol>
         </div>
-        <div id="address">
-
+        <div class="content">
+          <a href="#">About</a>
+          <ol>
+            <li>hello</li>
+            <li>hello</li>
+            <li>hello</li>
+          </ol>
         </div>
+        <div class="content">
+          <a href="#">About</a>
+          <ol>
+            <li>hello</li>
+            <li>hello</li>
+            <li>hello</li>
+          </ol>
+        </div>
+        <div class="content">
+          <a href="#">About</a>
+          <ol>
+            <li>hello</li>
+            <li>hello</li>
+            <li>hello</li>
+          </ol>
+        </div>
+      </div>
+      <div class="box2">
+        <div class="content">
+          <a href="#">About</a>
+          <ol>
+            <li>hello</li>
+            <li>hello</li>
+            <li>hello</li>
+          </ol>
+        </div>
+        <div class="content">
+          <a href="#">About</a>
+          <ol>
+            <li>hello</li>
+            <li>hello</li>
+            <li>hello</li>
+          </ol>
+        </div>
+
+      </div>
     </div>
-
     <!-- payment &copyright -->
     <div id="copyright_payment">
-            <ul class="copyright_payment-content" >
-                <li><i class="bi bi-bag-heart"></i><a href="http://"> become a seller</a></li>
-                <li><i class="bi bi-badge-ad"></i><a href="http://"> Adverties</a></li>
-                <li><i class="bi bi-gift"></i><a href="http://"> Gift Cards</a></li>
-                <li><i class="bi bi-question-circle"></i><a href="http://"> Help Center</a></li>
-                <li><i class="bi bi-c-circle"></i><a href="http://">2023 techub4study </a></li>
-                <li><img src="./Images/logo/payment-method.svg" alt=""></li>
-            </ul>
+      <ul class="copyright_payment-content">
+        <li>
+          <i class="bi bi-bag-heart"></i><a href="http://"> become a seller</a>
+        </li>
+        <li><i class="bi bi-badge-ad"></i><a href="http://"> Adverties</a></li>
+        <li><i class="bi bi-gift"></i><a href="http://"> Gift Cards</a></li>
+        <li>
+          <i class="bi bi-question-circle"></i
+          ><a href="http://"> Help Center</a>
+        </li>
+        <li>
+          <i class="bi bi-c-circle"></i><a href="http://">2023 techub4study </a>
+        </li>
+        <li><img src="./Images/logo/payment-method.svg" alt="" /></li>
+      </ul>
     </div>
   </body>
 </html>
