--- a/index.html
+++ b/index.html
@@ -227,56 +227,75 @@
     <div id="footer">
       <div class="box1">
         <div class="content">
-          <a href="#">About</a>
           <ol>
-            <li>hello</li>
-            <li>hello</li>
-            <li>hello</li>
+            <li><a href="#" class="content_heading">About</a></li>
+            <li>Contact Us</li>
+            <li>About Us</li>
+            <li>Careers</li>
+            <li>Flipkart Store</li>
+            <li>Press</li>
+            <li>Flipkart Wholesale</li>
+            <li>Corporate Information</li>
           </ol>
         </div>
         <div class="content">
-          <a href="#">About</a>
           <ol>
-            <li>hello</li>
-            <li>hello</li>
-            <li>hello</li>
+            <li><a href="#" class="content_heading">Help</a></li>
+            <li>payment</li>
+            <li>Shipping</li>
+            <li>Cancellation & Return</li>
+            <li>FAQ</li>
+            <li>Report Infringement</li>
           </ol>
         </div>
         <div class="content">
-          <a href="#">About</a>
           <ol>
-            <li>hello</li>
-            <li>hello</li>
-            <li>hello</li>
+            <li><a href="#" class="content_heading">CONSUMER POLICY</a></li>
+            <li>Cancellation & Return</li>
+            <li>Terms Of Use</li>
+            <li>Security</li>
+            <li>Privacy</li>
+            <li>Sitemap</li>
           </ol>
         </div>
         <div class="content">
-          <a href="#">About</a>
           <ol>
-            <li>hello</li>
-            <li>hello</li>
-            <li>hello</li>
+            <li><a href="#" class="content_heading">SOCIAL</a></li>
+            <li>Facebook</li>
+            <li>Twitter</li>
+            <li>YouTube</li>
           </ol>
         </div>
       </div>
       <div class="box2">
         <div class="content">
-          <a href="#">About</a>
-          <ol>
-            <li>hello</li>
-            <li>hello</li>
-            <li>hello</li>
+          <ol class="Registered_deatiles">
+            <li><a href="#" class="content_heading">Mail Us:</a></li>
+            <p>Flipkart internet Privacy limited,</p>
+            <p>Building Alyssa, Begonio &</p>
+            <p>Outer Ring Road, Devarabeesanahalli Village,</p>
+            <p>Bengaluru, 560103,</p>
+            <p>Karnataka, India</p>
+            <!-- <p>Flipkart internet Privacy limited</p>
+            <p>Flipkart internet Privacy limited</p> -->
           </ol>
         </div>
         <div class="content">
-          <a href="#">About</a>
           <ol>
-            <li>hello</li>
-            <li>hello</li>
-            <li>hello</li>
+            <a href="#" class="content_heading">Registered Office Address</a>
+            <p>Flipkart Internet Private Limited,</p>
+            <p>Buildings Alyssa, Begonia &</p>
+            <p>Clove Embassy Tech Village,</p>
+            <p>Outer Ring Road, Devarabeesanahalli Village,</p>
+            <p>Bengaluru, 560103,</p>
+            <p>Karnataka, India</p>
+            <p>CIN : U51109KA2012PTC066107</p>
+            <p>
+              Telephone:
+              <a class="telephone" href="tel:044-45614700">044-45614700</a>
+            </p>
           </ol>
         </div>
-
       </div>
     </div>
     <!-- payment &copyright -->
