--- a/index.html
+++ b/index.html
@@ -227,6 +227,33 @@
   </div>
   </div>
 
+
+  <!-- big_billion_sale 1-->
+  <div id="big_billion_sale">
+    <div class="bigbillion-card">
+      <img src="./Images/top ads item/item1.jpg" alt="">
+    </div>
+    <div class="bigbillion-card">
+      <img src="./Images/top ads item/item2.jpg" alt="">
+    </div>
+    <div class="bigbillion-card">
+      <img src="./Images/top ads item/item3.jpg" alt="">
+    </div>
+  </div>
+
+  <!-- big_billion_sale 2 -->
+  <div id="big_billion_sale">
+    <div class="bigbillion-card">
+      <img src="./Images/top ads item/item4.jpg" alt="">
+    </div>
+    <div class="bigbillion-card">
+      <img src="./Images/top ads item/item5.jpg" alt="">
+    </div>
+    <div class="bigbillion-card">
+      <img src="./Images/top ads item/item6.jpg" alt="">
+    </div>
+  </div>
+
   <!-- top story directory setup -->
   <div id="top_story_directory">
     <div class="top_story_directory_content">
