--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body>
   <!-- header design -->
-
   <div id="header">
     <div class="logo">
       <img src="./Images/logo/logo.svg" alt="" /><br />
@@ -240,19 +239,212 @@
       <img src="./Images/top ads item/item3.jpg" alt="">
     </div>
   </div>
-
-  <!-- big_billion_sale 2 -->
-  <div id="big_billion_sale">
-    <div class="bigbillion-card">
-      <img src="./Images/top ads item/item4.jpg" alt="">
+  
+  <!-- top products  -->
+  <div class="top_products">
+    <div class="top_products_heading">
+      <p>Top Deal on Fashion</p>
     </div>
-    <div class="bigbillion-card">
-      <img src="./Images/top ads item/item5.jpg" alt="">
+    <div class="top_products_items">
+      <div class="offer-card">
+        <img src="./Images/Top offers/iphone.jpg" alt="errror">
+        <p><span style="font-size: 14px;">iphone</span><br>
+          <span style="font-weight: bold; font-size: 15px;">incl of offers</span>
+        </p>
+      </div>
+      <div class="offer-card">
+        <img src="./Images/top deals on fasion/fastrack.jpg" alt="errror">
+        <p><span style="font-size: 14px;">Fastracts</span><br>
+          <span style="font-weight: bold; font-size: 15px;">37-70% Off</span>
+        </p>
+      </div>
+    <div class="offer-card">
+      <img src="./Images/top deals on fasion/puma.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Puma, Skechers &more</span><br>
+        <span style="font-weight: bold; font-size: 15px;">Min. 50% Off</span>
+      </p>
     </div>
-    <div class="bigbillion-card">
-      <img src="./Images/top ads item/item6.jpg" alt="">
+    <div class="offer-card">
+      <img src="./Images/top deals on fasion/sunglasses.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Sun Glasses</span><br>
+        <span style="font-weight: bold; font-size: 15px;">under ₹599</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/Top offers/iphone.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Iphone 12 pro</span><br>
+        <span style="font-weight: bold; font-size: 15px;">Min. 28% Off</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/Top offers/galaxy 5g.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Sumsang galaxy 5G</span><br>
+        <span style="font-weight: bold; font-size: 15px;">Limited Offers</span>
+      </p>
     </div>
   </div>
+</div>
+
+<!-- big_billion_sale 2 -->
+<div id="big_billion_sale">
+  <div class="bigbillion-card">
+    <img src="./Images/top ads item/item4.jpg" alt="">
+  </div>
+  <div class="bigbillion-card">
+    <img src="./Images/top ads item/item5.jpg" alt="">
+  </div>
+  <div class="bigbillion-card">
+    <img src="./Images/top ads item/item6.jpg" alt="">
+  </div>
+</div>
+<!-- top products2 -->
+<div class="top_products">
+  <div class="top_products_heading">
+    <p>Top Deals on Electronics</p>
+  </div>
+  <div class="top_products_items">
+    <div class="offer-card">
+      <img src="./Images/top electronic deals/oneplus.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Treuwireless Earphones</span><br>
+        <span style="font-weight: bold; font-size: 15px;">From ₹499</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top electronic deals/fire-boltt.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Fire-Boltt Smart Watch</span><br>
+        <span style="font-weight: bold; font-size: 15px;">From ₹1,099</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top electronic deals/nova ng.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Best of Trimmers</span><br>
+        <span style="font-weight: bold; font-size: 15px;">From ₹399</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top electronic deals/sumsang.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Samsung S6 Lite</span><br>
+        <span style="font-weight: bold; font-size: 15px;">From ₹22,999</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top electronic deals/router.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Top deals On Routers!</span><br>
+        <span style="font-weight: bold; font-size: 15px;">From ₹799</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top electronic deals/epson.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Printer Inks and Toners</span><br>
+        <span style="font-weight: bold; font-size: 15px;">Up to 10% Off</span>
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- top peoducs 3 -->
+<div class="top_products">
+  <div class="top_products_heading">
+    <p>Top Deal Offers</p>
+  </div>
+  <div class="top_products_items">
+    <div class="offer-card">
+      <img src="./Images/Top offers/iphone.jpg" alt="errror">
+      <p><span style="font-size: 14px;">iphone</span><br>
+        <span style="font-weight: bold; font-size: 15px;">incl of offers</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top deals on fasion/fastrack.jpg" alt="errror">
+      <p><span style="font-size: 14px;">iphone</span><br>
+        <span style="font-weight: bold; font-size: 15px;">incl of offers</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top deals on fasion/puma.jpg" alt="errror">
+      <p><span style="font-size: 14px;">iphone</span><br>
+        <span style="font-weight: bold; font-size: 15px;">incl of offers</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top deals on fasion/sunglasses.jpg" alt="errror">
+      <p><span style="font-size: 14px;">iphone</span><br>
+        <span style="font-weight: bold; font-size: 15px;">incl of offers</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/Top offers/iphone.jpg" alt="errror">
+      <p><span style="font-size: 14px;">iphone</span><br>
+        <span style="font-weight: bold; font-size: 15px;">incl of offers</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/Top offers/galaxy 5g.jpg" alt="errror">
+      <p><span style="font-size: 14px;">iphone</span><br>
+        <span style="font-weight: bold; font-size: 15px;">incl of offers</span>
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- big billion sale 3 -->
+<div id="big_billion_sale">
+  <div class="bigbillion-card">
+    <img src="./Images/top ads item/item7.jpg" alt="">
+  </div>
+  <div class="bigbillion-card">
+    <img src="./Images/top ads item/item8.jpg" alt="">
+  </div>
+  <div class="bigbillion-card">
+    <img src="./Images/top ads item/item9.jpg" alt="">
+  </div>
+</div>
+
+
+<!-- top deals 4 -->
+<div class="top_products">
+  <div class="top_products_heading">
+    <p>Best Fashion Brand For You!</p>
+  </div>
+  <div class="top_products_items">
+    <div class="offer-card">
+      <img src="./Images/top deals on fasion/puma.jpg" alt="errror">
+      <p><span style="font-size: 14px;">PUMA, ADIDAS & more</span><br>
+        <span style="font-weight: bold; font-size: 15px;">Min 40-70% Off</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top deals on fasion/fastrack.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Fastracts watches</span><br>
+        <span style="font-weight: bold; font-size: 15px;">From Start ₹599</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top fashion brands/girl lehnga.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Girl Lehenga Choli</span><br>
+        <span style="font-weight: bold; font-size: 15px;">Just Start ₹499</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top fashion brands/ausk tshirt.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Mens T-Shirt</span><br>
+        <span style="font-weight: bold; font-size: 15px;">From Start ₹799</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top fashion brands/smartees t shirt.jpg" alt="errror">
+      <p><span style="font-size: 14px;">smartees t shirt</span><br>
+        <span style="font-weight: bold; font-size: 15px;">Min 40% Off</span>
+      </p>
+    </div>
+    <div class="offer-card">
+      <img src="./Images/top fashion brands/girl lehnga1.jpg" alt="errror">
+      <p><span style="font-size: 14px;">Girl Lehenga Choli</span><br>
+        <span style="font-weight: bold; font-size: 15px;">Offer Limited 30% Off</span>
+      </p>
+    </div>
+  </div>
+</div>
 
   <!-- top story directory setup -->
   <div id="top_story_directory">
