--- a/index.html
+++ b/index.html
@@ -142,37 +142,11 @@
   </div>
 
   <!-- Slider hero main content -->
-
-  <div id="flipkart_carousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="5000">
-        <img src="./Images/slider/slider1.jpg" class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <img src="./Images/slider/slider2.jpg" class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <img src="./Images/slider/slider3.jpg" class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <img src="./Images/slider/slider4.jpg" class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <img src="./Images/slider/slider5.jpg" class="d-block w-100" alt="..." />
-      </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <img src="./Images/slider/slider6.jpg" class="d-block w-100" alt="..." />
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+<div class="carousel_slider">
+  <div class="images_slider">
+    <img src="./Images/slider/slider1.jpg" alt="">
   </div>
+</div>
 
   <!-- ads design -->
   <div id="ads">
