--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="header_icon_link_content">
       <a href="#"><i class="bi bi-shop-window"></i>Become a Sealler</a>
     </div>
-    <div class="header_icon_link_content">
+    <div class="header_icon_link_content Sign_in_person">
       <a href="#"><i class="bi bi-person"></i>Sign in</a>
     </div>
     <div class="header_icon_link_content">
