--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
         <i class="bi bi-question-circle"></i><a href="http://"> Help Center</a>
       </li>
       <li>
-        <i class="bi bi-c-circle"></i><a href="http://">2023 techub4study </a>
+        <i class="bi bi-c-circle"></i><a href="http://">2023 all right reseved theindresh </a>
       </li>
       <li><img src="./Images/logo/payment-method.svg" alt="" /></li>
     </ul>
