--- a/index.html
+++ b/index.html
@@ -142,9 +142,28 @@
   </div>
 
   <!-- Slider hero main content -->
-<div class="carousel_slider">
-  <div class="images_slider">
-    <img src="./Images/slider/slider1.jpg" alt="">
+<div class="container-fluid">
+  <div class="carousel slide mt-2 mb-0 " data-bs-ride="carousel">
+    <div class="carousel-inner rounded-3">
+      <div class="carousel-item active">
+        <img src="./Images/slider/slider1.jpg" alt="" class="w-100 d-block">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/slider/slider2.jpg" alt="" class="w-100 d-block">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/slider/slider3.jpg" alt="" class="w-100 d-block">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/slider/slider4.jpg" alt="" class="w-100 d-block">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/slider/slider5.jpg" alt="" class="w-100 d-block">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/slider/slider6.jpg" alt="" class="w-100 d-block">
+      </div>
+    </div>
   </div>
 </div>
 
@@ -805,6 +824,8 @@
       <li><img src="./Images/logo/payment-method.svg" alt="" /></li>
     </ul>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+ 
 </body>
 
 </html>
